_sass/_layout.scss
.back-btn {
  text-decoration: none;
  color: rgb(49,49,49);
  margin-top: 0;
  position: relative;
  top: -8px;
}

.back-btn:hover {
  color: black;
}

.site-header p {
  display: block;
  margin-block-start: 1em;
  margin-block-end: 1em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
}

.site-title {
  font-weight: 400;
  font-size: 1.4em;
}

.page-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  align-items: center;
}

.social-media-list {
  list-style-type: none;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 136px;
}

.svg-icon {
  width: 22px;
  height: 22px;
  opacity: .7;
  transition: opacity 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
}

.svg-icon:hover {
  cursor: pointer;
  opacity: .9;
}

section {
  display: block;
  max-width: $content-width;
  width: 100%;
}

h3 {
  display: block;
  font-size: 1.17em;
  margin-block-start: 1em;
  margin-block-end: 1em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
  font-weight: bold;
}

.post-category {
  margin-top: 64px;
  font-weight: 400;
}

.post-row {
  display: flex;
  color: black;
  text-decoration: none;
  margin-bottom: 16px;
}

.post-row:hover {
  background: rgb(251, 251, 251);
}

.post-img {
  display: block;
  overflow: hidden;
  height: 180px;
  width: 180px;
  flex-shrink: 0;
}

.post-img img {
  height: 100%;
  width: 100%;
}

.post-details {
  display: flex;
  flex-direction: row;
  -webkit-box-align: center;
  align-items: center;
}

.post-date {
  display: block;
  margin-left: 32px;
  margin-right: 16px;
  flex-shrink: 0;
  font-weight: 300;
  font-size: 0.8em;
}

.post-title {
  display: block;
}

.post-subtitle {
  display: block;
  font-weight: 300;
  font-size: 0.8em;
}

.post-header h2 {
  display: block;
  font-size: 1.5em;
  margin-block-start: 0.83em;
  margin-block-end: 0.83em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
  font-weight: bold;
}

.post-byline {
  position: relative;
  top: -12px;
  font-weight: 300;
  margin-bottom: 8px;
}

@media (max-width: $on-palm) {
  .site-title {
    text-align: center;
  }

  .svg-icon {
    width: 28px;
    height: 28px;
  }

  .social-media-list {
    margin: 0 auto;
    width: 257px;
  }

  .page-content {
    width: calc(100% - 40px);
    margin: 0 20px;
  }

  .post-img {
    height: 100px;
    width: 100px;
  }

  .post-details {
    align-items: flex-start;
    flex-direction: column;
    margin-left: 16px;
    -webkit-box-align: center;
    justify-content: center;
  }

  .post-date {
    margin-left: 0;
  }
}

